[gd_scene load_steps=5 format=3 uid="uid://cn2gsmdq0h8uo"]

[ext_resource type="Script" path="res://Scenes/candle_puzzle.gd" id="1_csyyv"]
[ext_resource type="Texture2D" uid="uid://bxdd6swkixmb5" path="res://Assets/sprites/light.png" id="1_qq2nc"]
[ext_resource type="Texture2D" uid="uid://68cj3dmnvr2t" path="res://Assets/sprites/black_square.png" id="3_0jlyw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tc3bw"]
size = Vector2(320, 560)

[node name="candle" type="Node2D"]
script = ExtResource("1_csyyv")

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_qq2nc")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.05, 0.05)
texture = ExtResource("3_0jlyw")

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(0.1, 0.1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 120)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_tc3bw")

[node name="symbolText" type="Label" parent="."]
offset_left = -16.0
offset_top = -40.0
offset_right = 24.0
offset_bottom = -17.0
scale = Vector2(0.599999, 1)
text = "1 B"
uppercase = true

[node name="noteText" type="Label" parent="."]
offset_left = -16.0
offset_top = 168.0
offset_right = 24.0
offset_bottom = 191.0

[connection signal="area_entered" from="Area2D" to="." method="player_entered"]
